[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "web-image-extractor"
version = "0.1.5"
description = "Lightweight, dependency-free webpage image scraper"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Daniel" }]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/DanielOnGitHub17/image-extractor"
